--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             </ul>
           </li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a class="nav-link scrollto" href="assets/Abby Feng Resume.pdf" target="_blank">Resume</a></li>
+
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -74,7 +76,8 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/hero-bg.jpg)">
+  <div id="hero" class="hero route bg-image"
+    style="background-image: url(assets/img/golden-gate-bridge-at-san-francisco-top.jpeg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -115,6 +118,17 @@
                         <p><span class="title-s">Email: </span> <span>huifeng248@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>(617) 834-0218</span></p>
                       </div>
+                      <!-- <div class="about_me_container">
+                        <ul>
+                          <li><a href="https://github.com/huifeng248"><i class="bi bi-github logo" target='_blank'
+                                rel='noreferrer'></i></a></li>
+                          <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                          <li><a href="https://angel.co/u/hui-abby-feng"><i class="fa fa-angellist logo" target='_blank'
+                                rel='noreferrer'></i></a></li>
+                          <li><a href="https://www.linkedin.com/in/hui-abby-feng-cpa/"><i class="bi bi-linkedin logo"
+                                target='_blank' rel='noreferrer'></i></a></li>
+                        </ul>
+                      </div> -->
                     </div>
                   </div>
                   <div class="skill-mf">
@@ -692,7 +706,7 @@
                       </h5>
                     </div>
                     <div> -->
-                      <!-- <form action="https://formspree.io/f/meqdaran" method="POST" role="form" class="php-email-form">
+                    <!-- <form action="https://formspree.io/f/meqdaran" method="POST" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
@@ -709,7 +723,7 @@
                               <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
                             </div>
                           </div> -->
-                      <!-- <div class="col-md-12">
+                    <!-- <div class="col-md-12">
                             <div class="form-group">
                               <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                             </div>
@@ -724,7 +738,7 @@
                           </div>
                         </div>
                       </form> -->
-                      <!-- <form action="https://formspree.io/f/meqdaran" method="POST" class="php-email-form">
+                    <!-- <form action="https://formspree.io/f/meqdaran" method="POST" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
@@ -751,46 +765,46 @@
                           </div>
 
                           <!-- your other form fields go here -->
-                          <!-- <div class="col-md-12 text-center">
+                    <!-- <div class="col-md-12 text-center">
                             <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
                           </div>
                         </div>
-                      </form> --> 
-                    </div>
+                      </form> -->
                   </div>
-                  <div class="col-md-6">
-                    <div class="title-box-2 pt-4 pt-md-0">
-                      <h5 class="title-left">
-                        Get in Touch
-                      </h5>
-                    </div>
-                    <div class="more-info">
-                      <p class="lead">
-                        I am open to discuss projects and technical solutions! Let's connect and chat!
-                      </p>
-                      <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> San Francisco, CA</li>
-                        <li><span class="bi bi-phone"></span> (617) 834-0218</li>
-                        <li><span class="bi bi-envelope"></span> huifeng248@gmail.com</li>
-                      </ul>
-                    </div>
-                    <div class="socials">
-                      <ul>
-                        <li><a href="https://github.com/huifeng248"><span class="ico-circle"><i class="bi bi-github"
-                                target='_blank' rel='noreferrer'></i></span></a></li>
-                        <!-- <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li> -->
-                        <li><a href="https://angel.co/u/hui-abby-feng"><span class="ico-circle"><i
-                                class="fa fa-angellist" target='_blank' rel='noreferrer'></i></span></a></li>
-                        <li><a href="https://www.linkedin.com/in/hui-abby-feng-cpa/"><span class="ico-circle"><i
-                                class="bi bi-linkedin" target='_blank' rel='noreferrer'></i></span></a></li>
-                      </ul>
-                    </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="title-box-2 pt-4 pt-md-0">
+                    <h5 class="title-left">
+                      Get in Touch
+                    </h5>
+                  </div>
+                  <div class="more-info">
+                    <p class="lead">
+                      I am open to discuss projects and technical solutions! Let's connect and chat!
+                    </p>
+                    <ul class="list-ico">
+                      <li><span class="bi bi-geo-alt"></span> San Francisco, CA</li>
+                      <li><span class="bi bi-phone"></span> (617) 834-0218</li>
+                      <li><span class="bi bi-envelope"></span> huifeng248@gmail.com</li>
+                    </ul>
+                  </div>
+                  <div class="socials">
+                    <ul>
+                      <li><a href="https://github.com/huifeng248"><span class="ico-circle"><i class="bi bi-github"
+                              target='_blank' rel='noreferrer'></i></span></a></li>
+                      <!-- <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li> -->
+                      <li><a href="https://angel.co/u/hui-abby-feng"><span class="ico-circle"><i class="fa fa-angellist"
+                              target='_blank' rel='noreferrer'></i></span></a></li>
+                      <li><a href="https://www.linkedin.com/in/hui-abby-feng-cpa/"><span class="ico-circle"><i
+                              class="bi bi-linkedin" target='_blank' rel='noreferrer'></i></span></a></li>
+                    </ul>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
       </div>
     </section><!-- End Contact Section -->
 
