--- a/index.html
+++ b/index.html
@@ -206,93 +206,199 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
+                <!-- <span class="ico-circle"><i class="bi bi-briefcase"></i></span> -->
+                <span><img class="skill_img" src="./assets/img/Javascript.png" alt="javascript"> </span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Web Design</h2>
-                <p class="s-description text-center">
+                <h2 class="s-title">JavaScript</h2>
+                <!-- <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
                   tempora perferendis eum non provident.
-                </p>
+                </p> -->
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
+                <!-- <span class="ico-circle"><i class="bi bi-card-checklist"></i></span> -->
+                <span><img class="skill_img" src="./assets/img/Python.png" alt="Python"> </span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Web Development</h2>
-                <p class="s-description text-center">
+                <h2 class="s-title">Python</h2>
+                <!-- <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
                   tempora perferendis eum non provident.
-                </p>
+                </p> -->
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-bar-chart"></i></span>
+                <!-- <span class="ico-circle"><i class="bi bi-bar-chart"></i></span> -->
+                <span><img class="skill_img" src="./assets/img/css3.png" alt="css"> </span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Photography</h2>
-                <p class="s-description text-center">
+                <h2 class="s-title">CSS3</h2>
+                <!-- <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
                   tempora perferendis eum non provident.
-                </p>
+                </p> -->
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
+                <!-- <span class="ico-circle"><i class="bi bi-binoculars"></i></span> -->
+                <span><img class="skill_img" src="./assets/img/React-icon.png" alt="React"> </span>
+
               </div>
               <div class="service-content">
-                <h2 class="s-title">Responsive Design</h2>
-                <p class="s-description text-center">
+                <h2 class="s-title">React</h2>
+                <!-- <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
                   tempora perferendis eum non provident.
-                </p>
+                </p> -->
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-brightness-high"></i></span>
+                <!-- <span class="ico-circle"><i class="bi bi-brightness-high"></i></span> -->
+                <span><img class="skill_img" src="./assets/img/redux.jpg" alt="Redux"> </span>
+
               </div>
               <div class="service-content">
-                <h2 class="s-title">Graphic Design</h2>
-                <p class="s-description text-center">
+                <h2 class="s-title">Redux</h2>
+                <!-- <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
                   tempora perferendis eum non provident.
-                </p>
+                </p> -->
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-calendar4-week"></i></span>
+                <!-- <span class="ico-circle"><i class="bi bi-calendar4-week"></i></span> -->
+                <span><img class="skill_img" src="./assets/img/node-js.png" alt="NodeJs"> </span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Marketing Services</h2>
-                <p class="s-description text-center">
+                <h2 class="s-title">NodeJs</h2>
+                <!-- <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                   provident vitae! Magni
                   tempora perferendis eum non provident.
-                </p>
+                </p> -->
               </div>
             </div>
           </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <!-- <span class="ico-circle"><i class="bi bi-briefcase"></i></span> -->
+                <span><img class="skill_img" src="./assets/img/expressjs.png" alt="expressjs"> </span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Express</h2>
+                <!-- <p class="s-description text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                  provident vitae! Magni
+                  tempora perferendis eum non provident.
+                </p> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <!-- <span class="ico-circle"><i class="bi bi-briefcase"></i></span> -->
+                <span><img class="skill_img" src="./assets/img/sqlalchemy.png" alt="SQLAlchemy"> </span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">SQLAlchemy</h2>
+                <!-- <p class="s-description text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                  provident vitae! Magni
+                  tempora perferendis eum non provident.
+                </p> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <!-- <span class="ico-circle"><i class="bi bi-briefcase"></i></span> -->
+                <span><img class="skill_img" src="./assets/img/sqlite3.png" alt="sqlite3"> </span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Sqlite3</h2>
+                <!-- <p class="s-description text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                  provident vitae! Magni
+                  tempora perferendis eum non provident.
+                </p> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <!-- <span class="ico-circle"><i class="bi bi-briefcase"></i></span> -->
+                <span><img class="skill_img" src="./assets/img/html5.png" alt="html5"> </span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">HTML</h2>
+                <!-- <p class="s-description text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                  provident vitae! Magni
+                  tempora perferendis eum non provident.
+                </p> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <!-- <span class="ico-circle"><i class="bi bi-briefcase"></i></span> -->
+                <span><img class="skill_img" src="./assets/img/sequelize.png" alt="sequelize"> </span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Sequelize</h2>
+                <!-- <p class="s-description text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                  provident vitae! Magni
+                  tempora perferendis eum non provident.
+                </p> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <!-- <span class="ico-circle"><i class="bi bi-briefcase"></i></span> -->
+                <span><img class="skill_img" src="./assets/img/falsk.png" alt="flask"> </span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title">Flask</h2>
+                <!-- <p class="s-description text-center">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
+                  provident vitae! Magni
+                  tempora perferendis eum non provident.
+                </p> -->
+              </div>
+            </div>
+          </div>
+
+
         </div>
       </div>
     </section><!-- End Services Section -->
@@ -603,7 +709,7 @@
                 <h3 class="card-title"><a href="https://faceta.herokuapp.com/" target="_blank">FaceTa</a></h3>
                 <p class="card-description">
                   FaceTa is an online social media application inspired by FaceBook. The project is built using React,
-                  Redux, Flask, Python and SQLAlchemy. You can create, share post and socialize with friends on FaceTa.
+                  Redux, Flask, Python and SQLAlchemy. You can create, share post, comment on and like post and socialize with friends on FaceTa.
                 </p>
               </div>
               <div class="card-footer">
@@ -667,8 +773,8 @@
                 </div>
                 <h3 class="card-title"><a href="https://abbybnb.herokuapp.com/" target="_blank">AbbyBnb</a></h3>
                 <p class="card-description">
-                  AbbyBnb is an online application that provide online marketplace for homestay lodging for vacation
-                  rentals and tourism stay. It's inspired by Airbnb. Feel free to brow the site and make bookings as you
+                  AbbyBnb is an online application inspired by Airbnb. It provides online marketplace for homestay lodging for vacation
+                  rentals and tourism stay. Feel free to brow the site and make bookings as you
                   like. Technologies used: React, Redux, Express, and Sequelize.
                 </p>
               </div>
