--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 Skills
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                The follow technologies are used in the projects.
               </p>
               <div class="line-mf"></div>
             </div>
@@ -773,9 +773,8 @@
                 </div>
                 <h3 class="card-title"><a href="https://abbybnb.herokuapp.com/" target="_blank">AbbyBnb</a></h3>
                 <p class="card-description">
-                  AbbyBnb is an online application inspired by Airbnb. It provides online marketplace for homestay lodging for vacation
-                  rentals and tourism stay. Feel free to brow the site and make bookings as you
-                  like. Technologies used: React, Redux, Express, and Sequelize.
+                  AbbyBnb is an web application inspired by Airbnb. It provides online marketplace for homestay lodging for vacation
+                  rentals and tourism stay. Feel free to brow the site and make bookings. Technologies used: React, Redux, Express, and Sequelize.
                 </p>
               </div>
               <div class="card-footer">
