--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">Hi, This is Hui Abby Feng</h1>
           <p class="hero-subtitle"><span class="typed" I am
-              data-typed-items="I am a Software Engineer, I am a Full Stack Software Engineer, I am a Frontend Developer, I am a Backend Developer"></span>
+              data-typed-items="I am a Software Engineer, I am a Full Stack Software Engineer, I am a Frontend Developer, I am a Backend Developer, I am also a CPA, I am a life-time learner"></span>
           </p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
